// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WebBookmark> Snapshots and structure should render correctly 1`] = `
<div
  className="lumx-web-bookmark lumx-web-bookmark--theme-light lumx-web-bookmark--size-regular"
>
  <div
    className="lumx-web-bookmark__thumbnail"
  >
    <Thumbnail
      align="center"
      aspectRatio="horizontal"
      image=""
      onClick={[Function]}
      role="link"
      tabIndex={0}
    />
  </div>
  <div
    className="lumx-web-bookmark__infos"
  >
    <Link
      className="lumx-web-bookmark__title"
      color="dark"
      colorVariant="N"
      target="_blank"
    />
    <p
      className="lumx-web-bookmark__description"
    />
    <Link
      className="lumx-web-bookmark__link"
      color="blue"
      colorVariant="N"
      target="_blank"
    />
  </div>
</div>
`;

exports[`<WebBookmark> Snapshots and structure should render correctly 2`] = `
<div
  className="lumx-web-bookmark lumx-web-bookmark--theme-light lumx-web-bookmark--size-big"
>
  <div
    className="lumx-web-bookmark__thumbnail"
  >
    <Thumbnail
      align="center"
      aspectRatio="horizontal"
      image=""
      onClick={[Function]}
      role="link"
      tabIndex={0}
    />
  </div>
  <div
    className="lumx-web-bookmark__infos"
  >
    <Link
      className="lumx-web-bookmark__title"
      color="dark"
      colorVariant="N"
      target="_blank"
    />
    <p
      className="lumx-web-bookmark__description"
    />
    <Link
      className="lumx-web-bookmark__link"
      color="blue"
      colorVariant="N"
      target="_blank"
    />
  </div>
</div>
`;
